src/test/resources/syntax/invalid/group_definition_string_constant_for_int.unpick
unpick v3
const int
    "" = ""